# blank-thoughts

./: CMakeLists.txt  README.md  add_cmake_to_path.ps1  config.py  core.py  index.html  requirements.txt  trades_2025.csv  web.py
core/: __init__.py  backtest.py  bot.py  combine_quotes.py  connection.py  guardian.py  local_llm.py  strategy.py
core/data/combined/: trades_eurusd-m5-mid-2025.csv
include/: camera.h  gl_utils.h  shader.h  sphere_mesh.h
shaders/: planet.frag
src/: camera.cpp  gl_utils.cpp  main.cpp  main_colours_deleted.tmp  shader.cpp  sphere_mesh.cpp
